# stuart

./: .gitignore  CONTRIBUTING.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tree.txt
stewart/: cli.py  models.py
stuart/: __init__.py  cli.py  client.py  models.py  prompts.py  settings.py  typing.py
tests/: conftest.py  test_cli.py  test_models.py  test_prompts.py  test_typing.py
tests/fixtures/vcr_cassettes/: pypi_nonexistent_package.yaml  pypi_requests_success.yaml  pypi_server_error.yaml
